* classic ui: "fixed" Incorrect positioning status popup in statusmap #3861 - RB
* classic ui: fixed possible NULL dereference-bug in summary.c #3740 - RB
* classic ui: fixed Command expansion problem with percentage signs #3929 - RB
* classic ui: cleaned up the jquery-ui includes to allow debian pkg dependencies #3808 - RB

* docs: add missing cmd_mod description in cgi params #3438 - MF
* docs: search_string as cgi GET param works also for status.cgi #3451 - MF
* docs: fix typo pqsql -> pgsql #3461 - WN

* icinga.spec: add idoutils as transitional package (thx Stefan Marx, Michael Grüner) #3640

CHANGES

* icinga.cfg - enable_state_based_escalation_ranges=0 (disabled if not set) fix for #3441
* core: -v param can be used more than once #3510
* core: 'Warning: Host ... has no service associated with it!' now happens only in icinga -vv icinga.cfg #3510

* ido2db.cfg:
	** use_transactions #3527
	** enable_socket_queue #3533

* icinga.spec: add idoutils as transitional package #3640


1.8.4 - 13/01/2013

FIXES
* core: add fix for CVE-2012-6096 - history.cgi remote command execution (Eric Stanley, Markus Frosch) #3532 - MF

* classic ui: Changed field size for hours to 4 when setting flexible downtime #3484 - RB
* classic ui: fixed Warning and Unknown States are mixed up in Alert Summary Report #3488 - RB

* idoutils: fix empty output/perfdata segfaults for mysql string truncate #3516 - MF
* idoutils: unlink leftover socket on startup, if using unix sockets - MF
* idoutils: fix long output data causes wrong data in database #2342 - MF


1.8.3 - 12/12/2012

FIXES
* idoutils: fix unknown column contactaddress_id (thx fmbiete) #3483 - MF


1.8.2 - 28/11/2012

FIXES
* core: fix macro escaping logs incorrect warning for $$escapes #3404 - MF
* core: fix wrong escalation notification due to state based escalation range behaviour changes #3441 - MF

* idoutils: fix many memory leaks in ido2db on dbi_result_free and others (thx Klaus Wagner) #3406 - MF